try getting robolectric working
Change-Id: I5bd239a58dadf35fbe5312d1a41c00de0856a875